@@ -36,7 +36,10 @@
       in a string using Unicode escapes. (\PR{16046})
 
       \item \code{qr.Q()} failed on complex arguments due to 
-      pre-3.0(!) typo (\PR{16054}) 
+      pre-3.0(!) typo. (\PR{16054}) 
+      
+      \item \code{abs()} failed with named arguments when the argument
+      was complex.  (\PR{16047})
     }
   }
 }
